--- a/front/public/index.html
+++ b/front/public/index.html
@@ -7,12 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="3D 웹 자동차 시뮬레이션 프로젝트"
+      content="3D 웹 레이싱 게임 프로젝트"
     />
-    <meta name="keywords" content="자동차 시뮬레이션, 3D 웹, fast-campus" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>패스트 캠퍼스 r3f 파트 3</title>
+    <title>프로젝트 제로백</title>
   </head>
   <body>
     <div id="root"></div>
